--- a/index.html
+++ b/index.html
@@ -138,11 +138,15 @@
       </div>
       
       <div class="py-4">
-        <div id="trending-articles" class="row g-4"></div>
+        <div class="row g-4">
+          <div id="trending-articles" class="row g-4"></div>
+        </div>
+        
       </div>
 
     </div>
     <script src="Script/main.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script src="trending-dev.js" defer></script>
   </body>
 </html>
