--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
   <script src="Script/main.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
   <script src="trending-dev.js" defer></script>
+  <script src="Script/newest-dev.js" defer></script>
 </body>
 
 </html>
